# MOOC

./: README.md
OSTEP/HW-Paging-tlb/: Makefile  tlb.c  wrapper.sh
OSTEP/HW-Threads-RealCV/: .README.swp  .main-two-cvs-while.c.swp  .pc-header.h.swp
edx/Computer Graphics/hw0/: CMakeLists.txt  Makefile  shaders.cpp
edx/Computer Graphics/hw0-linux_osx/: CMakeLists.txt  geometry3.h
edx/Computer Graphics/hw1/: CMakeLists.txt  Transform.cpp  shaders.cpp
edx/Computer Graphics/hw1/UCSD/: grader.cpp
intel/Introduction to OpenMP/: Makefile  hello_world.c  linked.c  linked_task.c  mandel.c  pi.c  pi_reduction.c  pi_sync.c  prod_cons.c  random.c
udacity/Intro to Parallel Programming/Lesson 1/: cube.cu
udacity/Intro to Parallel Programming/Problem Sets/Problem Set 1/: Makefile  main.cpp  student_func.cu
udacity/Intro to Parallel Programming/Problem Sets/Problem Set 2/: .student_func.cu.swp  Makefile  main.cpp  student_func.cu
udacity/Intro to Parallel Programming/Problem Sets/Problem Set 3/: Makefile  student_func.cu
