CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(hw0)

SET(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/mytest3.cpp ${CMAKE_CURRENT_SOURCE_DIR}/shaders.cpp)

ADD_EXECUTABLE(mytest3 ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(mytest3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/glm-0.9.7.1)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

TARGET_LINK_LIBRARIES(mytest3 PRIVATE OpenGL::GL GLUT::GLUT GLEW::GLEW freeimage)
TARGET_COMPILE_DEFINITIONS(mytest3 PRIVATE GL_GLEXT_PROTOTYPES GL_DO_NOT_WARN_IF_MULTI_GL_VERSION_HEADERS_INCLUDED)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/wood.ppm DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/teapot.obj DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
