CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(hw0)

SET(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/mytest3.cpp ${CMAKE_CURRENT_SOURCE_DIR}/shaders.cpp)

ADD_EXECUTABLE(mytest3 ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(mytest3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/glm-0.9.7.1)
TARGET_COMPILE_DEFINITIONS(mytest3 PRIVATE GL_GLEXT_PROTOTYPES GL_DO_NOT_WARN_IF_MULTI_GL_VERSION_HEADERS_INCLUDED)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
IF(WIN32)
  FIND_LIBRARY(freeimage_library FreeImage)
  FIND_LIBRARY(freeimage_debug_library FreeImaged)
ELSE()
  FIND_LIBRARY(freeimage_library freeimage)
  FIND_LIBRARY(freeimage_debug_library freeimage)
ENDIF()

TARGET_LINK_LIBRARIES(mytest3 PRIVATE OpenGL::GL GLUT::GLUT GLEW::GLEW)

IF(freeimage_library)
  TARGET_LINK_LIBRARIES(mytest3 PRIVATE optimized ${freeimage_library})
ENDIF()
IF(freeimage_debug_library)
  TARGET_LINK_LIBRARIES(mytest3 PRIVATE debug ${freeimage_debug_library})
ENDIF()

add_custom_command(TARGET mytest3 POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/shaders ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/shaders
  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/wood.ppm ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}
  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/teapot.obj ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}
  )
